@@ -247,6 +247,26 @@ Revision	: 0000
 Serial		: 0000000000000000
 ---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_max_freq
 864000
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/uevent
+POWER_SUPPLY_NAME=battery
+POWER_SUPPLY_TYPE=Battery
+POWER_SUPPLY_STATUS=Charging
+POWER_SUPPLY_PRESENT=1
+POWER_SUPPLY_HEALTH=Good
+POWER_SUPPLY_TECHNOLOGY=Li-poly
+POWER_SUPPLY_CAPACITY=100
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/capacity
+100
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/batt_temp
+330
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/batt_vol
+4181
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/technology
+Li-poly
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/status
+Charging
+---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /sys/class/power_supply/battery/health
+Good
 ---Sun, 12 May 2013 18:32:54 +0000 GMT--- Reading: /proc/stat
 cpu  67446 9149 43018 32501 20250 9 64 0 0
 cpu0 67446 9149 43018 32501 20250 9 64 0 0
