@@ -2,6 +2,8 @@ phpSysInfo 3.1.4
 
  - [ADD] Option for reading the results of functions executeProgram() and rfts() from log
 
+ - [UPD] BAT plugin - added temperature, condition and type of battery, Android support
+
 phpSysInfo 3.1.3
 
  - [ADD] IPFire, Sabayon, PearOS, ClearOS, Frugalware, Fuduntu, Foresight, Tinycore, ALT Linux, ROSA and RedHatEnterpriseServer to detected distros
